config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground-dkfjdslkfjds
  labels:
    app: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: wil-playground-cont
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
