config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  spec:
    selector:
      app: main
    ports:
      - protocol: TCP
        port: 8888
        targetPort: 8888
