config/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wil-playground-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: wil-playground
          servicePort: 8888
